hagrid/fussmann_ews/Jobs/output/job-6001.out
Job 6001 released
Install python modules
  File "../../script_fussmann_ews.py", line 304
    df_pspec_boot.('pspec.csv')
                  ^
SyntaxError: invalid syntax

real	0m0.160s
user	0m0.138s
sys	0m0.014s
